--- a/static/apps/css/style.css
+++ b/static/apps/css/style.css
@@ -1,14 +1,32 @@
 body {
     background-color: black;
+    color: #ffffff;
 }
 
 hr {
     width: 100%;
 }
 
-button{
+button {
     background-color: rgba(255, 255, 255, 0.249);
 }
+
+.new_solution,
+.new_step,
+.new_start,
+.new_input {
+    background-color: rgb(138 150 225 / 28%);
+    border: 1px solid #ddd;
+    display: inline-block;
+    margin: 10px; /* Add margin to create spacing between elements */
+    text-align: center;
+    border-radius: 10px; /* Add rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+    width: calc(100% - 20px); /* Ensure one element per row on mobile */
+    box-sizing: border-box; /* Include padding in element width */
+    min-height: 0; /* Ensure minimum height is not greater than width */
+}
+
 
 .new_start {
     color: rgb(200, 200, 200);
@@ -25,8 +43,3 @@ button{
 .new_input_input {
     background-color: rgba(255, 255, 255, 0.249);
 }
-
-.new_solution{
-    font-weight: bold;
-}
-
