--- a/static/apps/css/style.css
+++ b/static/apps/css/style.css
@@ -14,7 +14,8 @@ button {
 .new_solution,
 .new_step,
 .new_start,
-.new_input {
+.new_input,
+.new_graph {
     background-color: rgb(138 150 225 / 28%);
     border: 1px solid #ddd;
     display: inline-block;
