--- a/static/apps/css/style.css
+++ b/static/apps/css/style.css
@@ -45,4 +45,9 @@ button {
 
 .new_input_input {
     background-color: rgba(255, 255, 255, 0.249);
+    margin-bottom: 2%;
+    text-align: center;
+    color: white;
+    height: 25px;
+    border-radius: 10px;
 }
