--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -29,5 +29,9 @@
 }
 
 form {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, 0) !important;
+}
+
+.massage {
+    font-size: medium !important;
 }
