--- a/static/css/account.css
+++ b/static/css/account.css
@@ -128,6 +128,7 @@ body {
 
 #container {
   background-color: rgb(138 150 225 / 28%);
+  color: white;
   border: 1px solid #ddd;
   margin: 10px;
   text-align: center;
