--- a/static/css/account.css
+++ b/static/css/account.css
@@ -116,7 +116,7 @@ body {
 }
 
 .account-block {
-
+  font-size: x-large;
   display: inline-block;
   margin: 10px;
   /* Add margin to create spacing between elements */
@@ -149,4 +149,8 @@ body {
   border-radius: 5px;
   background-color: #f9f9f9;
   color: #333;
+}
+
+img#u_img {
+  height: 120px;
 }
