--- a/static/css/account.css
+++ b/static/css/account.css
@@ -167,11 +167,13 @@ img#u_img {
 }
 
 #u_info {
+  font-size: medium;
   white-space: normal;
   word-wrap: break-word;
 }
 
 #u_gender {
+  font-style: italic;
   font-weight: lighter;
 }
 
