--- a/static/css/account.css
+++ b/static/css/account.css
@@ -185,8 +185,8 @@ img#u_img {
 @media (max-width: 615px) {
   .container {
     width: 40% !important;
-    margin: 5%;
-    margin-top: 20px;
-    float: left;
+    margin: 5% !important;
+    margin-top: 20px !important;
+    float: left !important;
   }
 }
