--- a/static/apps/css/x.css
+++ b/static/apps/css/x.css
@@ -21,7 +21,6 @@ button {
 .new_step,
 .new_start,
 .new_input,
-.new_check,
 .new_graph,
 .resetDiv {
     background-color: rgb(138 150 225 / 28%);
@@ -49,57 +48,18 @@ button {
     font-style: oblique;
 }
 
-/* 外部容器样式 */
-.new_check {
-    font-family: Arial, sans-serif;
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    margin: 10px;
-}
+.new_input {}
 
-/* 复选框容器样式 */
-.new_check_label {
+.new_input_label {
+    width: 100%;
     display: block;
-    margin-bottom: 10px;
 }
 
-/* 自定义复选框样式 */
-.new_check_input {
-    display: none;
-    /* 隐藏原始复选框 */
-}
-
-/* 自定义复选框的外部容器 */
-.custom-checkbox {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    position: relative;
-    margin-right: 10px;
-}
-
-/* 鼠标悬停时的自定义复选框样式 */
-.custom-checkbox:hover {
-    background-color: #e9e9e9;
-    cursor: pointer;
-}
-
-/* 提交按钮样式 */
-.new_check button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    padding: 5px 10px;
-    cursor: pointer;
-}
-
-/* 提交按钮悬停时的样式 */
-.new_check button:hover {
-    background-color: #0056b3;
+.new_input_input {
+    background-color: rgba(255, 255, 255, 0.249);
+    margin-bottom: 2%;
+    text-align: center;
+    color: white;
+    height: 25px;
+    border-radius: 10px;
 }
