--- a/static/apps/css/x.css
+++ b/static/apps/css/x.css
@@ -8,13 +8,14 @@ hr {
 }
 
 button {
+    font-size: xx-large;
     margin: 10px;
     border-radius: 10px;
-    height: 30px;
-    width: 170px;
+    height: 10vh;
+    width: 80%;
     color: white;
     font-weight: bold;
-    background-color: rgba(255, 255, 255, 0.249);
+    background-color: #DCB6FF;
 }
 
 .new_solution,
