--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,6 +162,8 @@ nav a {
 .footer-button {
     background-color: #3d436761;
     color: #fff;
+    margin-top: 3%;
+    margin-bottom: 3%;
     border-radius: 25%;
     padding: 10px 20px;
     width: 17%;
