--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,12 +2,16 @@
 body {
     margin: 0;
     padding: 0;
+    padding-top: 63px;
     background-color: black;
     font-family: Arial, sans-serif;
 }
 
 /* Define the top navigation bar styles */
 .top-bar {
+    top: 0;
+    width: 100%;
+    position: fixed;
     background-color: #202226;
     color: #8A96E1;
     padding: 1px 0;
@@ -45,6 +49,8 @@ nav a {
     white-space: nowrap;
     overflow-x: scroll;
     overflow-y: hidden;
+    position: relative;
+    z-index: 9999;
 }
 
 .type {
