--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,6 +57,8 @@ nav a {
 
 .type {
     font-size: x-large;
+    overflow-y: auto;
+    max-height: 100%;
     line-height: 50px;
     border-radius: 10px;
     margin-right: 1%;
