--- a/static/apps/css/x.css
+++ b/static/apps/css/x.css
@@ -12,7 +12,7 @@ button {
     margin: 10px;
     border-radius: 10px;
     height: 10vh;
-    width: 80%;
+    width: calc(100% - 20px);
     color: white;
     font-weight: bold;
     background-color: #DCB6FF;
