--- a/static/apps/css/x.css
+++ b/static/apps/css/x.css
@@ -11,7 +11,7 @@ button {
     font-size: xx-large;
     margin: 10px;
     border-radius: 10px;
-    height: 10vh;
+    height: 85px;
     width: calc(100% - 20px);
     color: white;
     font-weight: bold;
