--- a/static/apps/css/style.css
+++ b/static/apps/css/style.css
@@ -90,6 +90,6 @@ button {
     mask-size: 100% 100%;
     -webkit-mask-size: 100% 100%;
     background-color: white;
-    mask-image: url(../img/heroicons-music_note-circle.svg);
-    -webkit-mask-image: url(../img/heroicons-music_note-circle.svg);
+    mask-image: url(https://app.mathscichemlab.com/static/svg/liked.svg);
+    mask-image: url(https://app.mathscichemlab.com/static/svg/liked.svg);
 }
