--- a/static/apps/css/style.css
+++ b/static/apps/css/style.css
@@ -91,5 +91,5 @@ button {
     -webkit-mask-size: 100% 100%;
     background-color: white;
     mask-image: url(https://app.mathscichem.com/static/svg/liked.svg);
-    mask-image: url(https://app.mathscichem.com/static/svg/liked.svg);
+    -webkit-mask-image: url(https://app.mathscichem.com/static/svg/liked.svg);
 }
