--- a/static/apps/css/x.css
+++ b/static/apps/css/x.css
@@ -131,3 +131,7 @@ input:checked+.slider:before {
     -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
+
+tr{
+    width: 100vh;
+}
