--- a/static/apps/css/x.css
+++ b/static/apps/css/x.css
@@ -132,6 +132,37 @@ input:checked+.slider:before {
     transform: translateX(26px);
 }
 
-tr{
+tr {
     width: 100vh;
+}
+
+/* 滑动条容器 */
+/* 滑动条容器 */
+.slider-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+/* 滑动条样式 */
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    border-radius: 5px;
+    outline: none;
+    margin: 0 10px;
+}
+
+/* 滑动条滑块样式 */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #2196F3;
+    border-radius: 50%;
+    cursor: pointer;
 }
