--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -115,6 +115,12 @@ nav a {
     /* Ensure minimum height is not greater than width */
 }
 
+ins.adsbygoogle {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /* Style for the Flow Element that occupies a full row */
 .full-line {
     background-color: rgb(138, 150, 225, 0.28);
