--- a/static/apps/css/x.css
+++ b/static/apps/css/x.css
@@ -7,6 +7,11 @@ hr {
     width: 100%;
 }
 
+h3 {
+    margin-top: 6%;
+    font-weight: bolder;
+}
+
 button {
     font-size: xx-large;
     margin: 10px;
