--- a/static/css/class.css
+++ b/static/css/class.css
@@ -39,6 +39,11 @@
     margin-top: 1%;
 }
 
+.flow-element>h2 {
+    font-size: xx-large;
+    margin-top: 100px;
+}
+
 @media (max-width: 615px) {
     .types {
         display: grid;
