--- a/static/css/class.css
+++ b/static/css/class.css
@@ -39,9 +39,19 @@
     margin-top: 1%;
 }
 
+.flow-element {
+    padding: 30px;
+    margin-top: 10px;
+    height: auto;
+    width: calc(100% - 20px);
+    margin: 10px;
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 30px;
+}
+
 .flow-element>h2 {
     font-size: xx-large;
-    margin-top: 100px;
 }
 
 @media (max-width: 615px) {
