--- a/static/css/class.css
+++ b/static/css/class.css
@@ -54,6 +54,45 @@
     font-size: xx-large;
 }
 
+
+.form-container {
+    display: none;
+    flex-direction: column;
+    max-width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+input,
+textarea {
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 100%;
+}
+
+textarea {
+    height: 100px;
+    /* 设置合适的高度 */
+}
+
+button {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.error {
+    color: red;
+    font-size: 12px;
+}
+
 @media (max-width: 615px) {
     .types {
         display: grid;
