--- a/static/css/class.css
+++ b/static/css/class.css
@@ -57,17 +57,22 @@
 .form-container {
     display: flex;
     flex-direction: column;
-    align-items: center; /* 垂直居中 */
-    justify-content: center; /* 垂直居中 */
+    align-items: center;
+    /* 垂直居中 */
+    justify-content: center;
+    /* 垂直居中 */
     max-width: 300px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
-  }
+}
 
 input,
 textarea {
+    font-size: large;
+    height: 40px;
+    background-color: transparent;
     margin-bottom: 10px;
     padding: 8px;
     border: 1px solid #202226;
@@ -81,6 +86,9 @@ textarea {
 }
 
 button {
+    font-size: large;
+    margin-bottom: 10%;
+    width: 70%;
     padding: 10px;
     background-color: #8a96e1;
     color: white;
