--- a/static/css/class.css
+++ b/static/css/class.css
@@ -65,7 +65,12 @@
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
+    background-color: #000000a8;
     border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 input,
