--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@ body {
     padding-top: 63px;
     background-color: black;
     font-family: Arial, sans-serif;
+    zoom: 50%;
 }
 
 /* Define the top navigation bar styles */
