--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,7 @@ body {
     padding-top: 63px;
     background-color: black;
     font-family: Arial, sans-serif;
-    zoom: 50%;
+    zoom: 80%;
 }
 
 /* Define the top navigation bar styles */
@@ -222,6 +222,10 @@ ins.adsbygoogle {
 
 /* Media Query for iPad and Larger Devices */
 @media (min-width: 768px) {
+    body {
+        zoom: 50%;
+    }
+
     .container {
         margin: 0 auto;
         /* Center the container on larger screens */
