--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -5,6 +5,7 @@
 
 .new_page_con {
     position: absolute;
+    border-radius: 5px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
