--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -4,7 +4,7 @@
 }
 
 .new_page_con {
-    background-color: rgb(45 48 73);
+    background-color: rgb(45, 48, 73);
     border: 1px solid #ddd;
     position: absolute;
     border-radius: 5px;
@@ -13,4 +13,22 @@
     transform: translate(-50%, -50%);
     height: 80vh;
     width: 90vw;
+    z-index: 9999;
+    /* 保证悬浮元素在其他元素之上 */
+    overflow: auto;
+
+    /* 如果内容溢出，显示滚动条 */
+    /* 添加伪元素来创建遮罩效果 */
+    &::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        /* 半透明黑色背景 */
+        z-index: -1;
+        /* 使遮罩层在悬浮元素之后 */
+    }
 }
