--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -22,14 +22,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* 半透明黑色背景 */
-    z-index: 999;
-    /* 使遮罩层在悬浮元素之下 */
+    height: 500vh;
+    width: 500vw;
+    background-color: rgb(0 0 0 / 76%);
+    z-index: 9999;
     display: none;
-    /* 初始时不显示 */
 }
 
 .new_close {
