--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -39,6 +39,6 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: lightblue;
+    background-color: #DCB6FF;
     padding: 10px;
 }
