--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -57,13 +57,13 @@
 }
 
 .new_time_label {
+    display: inline-block;
     text-align: center;
     font-family: "Roboto", sans-serif;
     outline: 0;
     background-color: rgb(138 150 225 / 28%);
     width: 100%;
     border: 0;
-    margin: 0 0 15px;
     padding: 15px;
     box-sizing: border-box;
     font-size: 14px;
@@ -77,26 +77,41 @@
     background-color: rgb(138 150 225 / 28%);
     width: 100%;
     border: 0;
-    margin: 0 0 15px;
     padding: 15px;
     box-sizing: border-box;
     font-size: 14px;
 }
 
 .new_dis_input {
+    margin-top: 10px;
     font-family: "Roboto", sans-serif;
     outline: 0;
     background-color: rgb(138 150 225 / 28%);
     width: 100%;
-    height: 40px;
     border: 0;
     margin: 0 0 15px;
     padding: 15px;
     box-sizing: border-box;
     font-size: 14px;
+    margin-top: 15px;
 }
 
-.Get_Setting_button,
+.Get_Setting_button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: rgb(138 150 225 / 28%);
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+
 .new_task_button {
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
