--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -240,4 +240,12 @@ ins.adsbygoogle {
         transform: scale(0.5);
         transform-origin: top;
     }
+
+    .top-bar {
+        font-size: small !important;
+    }
+
+    .logo {
+        height: 40px;
+    }
 }
