--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -48,8 +48,10 @@ body {
 }
 
 .new_title_input {
+    color: white;
     text-align: center;
     font-family: "Roboto", sans-serif;
+    font-weight: bolder;
     outline: 0;
     background-color: rgb(138 150 225 / 28%);
     width: 100%;
@@ -75,6 +77,7 @@ body {
 
 #new_date,
 #new_time {
+    color: white;
     text-align: center;
     font-family: "Roboto", sans-serif;
     outline: 0;
