--- a/static/css/class.css
+++ b/static/css/class.css
@@ -29,7 +29,7 @@
     max-height: 100%;
     line-height: 50px;
     border-radius: 10px;
-    width: 200px;
+    width: auto;
     height: 50px;
     background-color: #8a96e1;
     border-right: 1px solid;
