--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -34,6 +34,7 @@ body {
 }
 
 .new_close {
+    font-family: 'Orbitron';
     font-weight: bolder;
     line-height: 0px;
     font-size: x-large;
@@ -44,7 +45,7 @@ body {
     top: 10px;
     right: 10px;
     background-color: #DCB6FF;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 .new_title_input {
@@ -105,7 +106,9 @@ body {
 
 .Get_Setting_button,
 .new_GoToTest {
-    font-family: "Roboto", sans-serif;
+    font-weight: bolder;
+    font-size: large;
+    font-family: 'Orbitron';
     text-transform: uppercase;
     outline: 0;
     background: rgb(138 150 225 / 28%);
@@ -113,7 +116,6 @@ body {
     border: 0;
     padding: 15px;
     color: #FFFFFF;
-    font-size: 14px;
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
     cursor: pointer;
