--- a/static/css/classroom.css
+++ b/static/css/classroom.css
@@ -3,6 +3,7 @@ body {
 }
 
 .flow-element {
+    box-shadow: 6px 6px 6px rgb(255 255 255 / 70%);
     height: auto;
     width: calc(100% - 20px);
 }
