--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -62,6 +62,7 @@ nav a {
 .type {
     font-size: x-large;
     overflow-x: hidden;
+    text-shadow: 4px 3px 1px rgba(0, 0, 0, 0.5);
     max-height: 100%;
     line-height: 50px;
     border-radius: 10px;
