--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -191,6 +191,11 @@ ins.adsbygoogle {
     margin-top: 10px;
     margin-left: 8px;
     margin-right: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
 }
 
 /* Define the mobile bottom navigation styles */
