--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -24,4 +24,5 @@
 /* Style for the Flow Element that occupies a full row */
 .full-line {
     width: calc(100% - 20px) !important;
+    -webkit-line-clamp: 4;
 }
