--- a/static/css/class.css
+++ b/static/css/class.css
@@ -77,6 +77,7 @@
 input,
 textarea {
     font-size: large;
+    font-family: 'Orbitron';
     color: white;
     height: 40px;
     background-color: transparent;
@@ -94,6 +95,7 @@ textarea {
 
 button {
     font-size: large;
+    font-family: 'Orbitron';
     margin-bottom: 10%;
     width: 70%;
     padding: 10px;
