--- a/test/styles.css
+++ b/test/styles.css
@@ -8,6 +8,7 @@ main {}
 }
 
 .test-top-bar {
+    background-color: #333;
     position: relative;
     top: 0;
     left: 0;
@@ -15,11 +16,11 @@ main {}
     width: 100vw;
 }
 
-#test-on{
+#test-on {
     float: left;
     margin-left: 5%;
 }
 
-#test-time{
+#test-time {
     margin: 0 auto;
 }
