--- a/test/styles.css
+++ b/test/styles.css
@@ -12,22 +12,27 @@ main {}
     position: relative;
     top: 0;
     left: 0;
-    height: 15%;
+    height: 10vh;
     width: 100vw;
+    display: flex;
+    align-items: center;
 }
 
 #test-on {
     position: fixed;
     text-align: center;
-    float: left;
     width: 20vw;
-    padding: 20px 0 20px 0;
+    padding: 20px 0;
 }
 
 #test-time {
-    padding: 20px 0 20px 0;
+    padding: 20px 0;
     width: 100vw;
     text-align: center;
-    float: left;
     margin: 0 auto;
+}
+
+.underline {
+    text-decoration: underline;
+    text-decoration-color: green;
 }
