--- a/test/styles.css
+++ b/test/styles.css
@@ -36,3 +36,23 @@ main {}
     text-decoration: underline;
     text-decoration-color: green;
 }
+
+#test-qustions {
+    position: relative;
+    height: 80vh;
+    width: 100vw;
+    left: 0;
+    overflow: auto;
+    background-color: white;
+}
+
+.test-bottom-bar {
+    background-color: #333;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    height: 10vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+}
