--- a/test/styles.css
+++ b/test/styles.css
@@ -56,3 +56,9 @@ main {}
     display: flex;
     align-items: center;
 }
+
+#next_button {
+    position: fixed;
+    text-align: center;
+    right: 20px;
+}
